2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mkdb.in:
	* tests/gobject/src/gobject.c:
	  We could add the language as a comment, it is not shown in the final output.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtkdoc-fixxref.in:
	  Really fix double extension of entities.

	* style.css:
	  Fix link color of xrefs symbols.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Indent.

	* gtkdoc-mkdb.in:
	  Fix end of string handling.

	* style.css:
	  Use one tango colors one more time.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/annotations/docs/Makefile.am:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	  Detect namespace prefix if not given.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* style-classic.css:
	* style.css:
	  Fix gap, caused by double index divs produces by index generated with
	  the docbook stylesheets.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtk-doc.xsl:
	  Make sure indexdiv and glossarydiv elements have anchors.

	* style-classic.css:
	* style.css:
	  Fix spacing for navbar in index/glossary pages.

	* tests/annotations/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Cleanup samples.

2009-01-19  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtk-doc.xsl:
	  Experiment with navigation for index and glossaries.

	* gtkdoc-fixxref.in:
	* gtkdoc-mkdb.in:
	  Fix index entries and copy doc along with the method.

	* style.css:
	  also do the extra spacing for the index/glossary environments now.

	* tests/gobject/docs/tester-docs.xml:
	  Experiment with a more complete doc structure.

2009-01-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Make highligher post processing conditional.

2009-01-10  Stefan Kost  <ensonic@users.sf.net>

	* configure.in: