@@ -1,3 +1,8 @@
+2009-01-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-fixxref.in:
+	  Try to xref first word in 'normal' span.
+
 2009-01-20  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
